# vigir_behaviors

./: .gitignore  LICENSE  README.md
behaviors/vigir_behavior_atlas_checkout/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_atlas_vehicle_checkout/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_cut_hole_in_wall/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_exploration_demo/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_flexbe_inner_test_behavior/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_flexbe_testprint_behavior/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_force_torque_sensor_calibration/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_locomotion_config/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_manipulation_config/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_motion_service_test/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_open_door_thor_turn/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_pickup_object/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_praying_mantis_calibration/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_push_door_open/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_simple_footstep_test/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_simple_joint_control_test/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_stand_up_behavior/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_startup_unit_testing/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_steering_calibration/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_surprise_plug/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_surprise_push_button/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_surprise_run_1_thor/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_surprise_task_trigger/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_system_identification_tests/: CMakeLists.txt  package.xml  setup.py
behaviors/vigir_behavior_test_behavior_input/: CMakeLists.txt  package.xml  setup.py
flexbe_atlas_states/: .project  .pydevproject  CMakeLists.txt  mainpage.dox  package.xml  setup.py
flexbe_atlas_states/src/flexbe_atlas_states/: __init__.py  attach_object_state.py  calculate_force_torque_calibration_state.py  calculate_force_torque_calibration_state_test.py  change_control_mode_action_state.py  check_current_control_mode_state.py  create_step_goal_state.py  current_joint_positions_state.py  detach_object_state.py  execute_step_plan_action_state.py  execute_trajectory_both_arms_state.py  execute_trajectory_state.py  execute_trajectory_whole_body_state.py  finger_configuration_state.py  footstep_plan_realign_center_state.py  footstep_plan_wide_stance_state.py  get_camera_image_state.py  get_pose_in_frame_state.py  get_template_affordance_state.py  get_template_pose_state.py  get_template_stand_pose_state.py  get_template_usability_state.py  hand_trajectory_state.py  irobot_release_grasp_state.py  load_trajectory_from_bagfile_state.py  locomotion_pose_perception_state.py  look_at_target_state.py  motion_service_state.py  moveit_commander_move_group_state.py  moveit_planning_state.py  plan_affordance_state.py  plan_endeffector_circular_motion_state.py  plan_endeffector_pose_state.py  plan_footsteps_state.py  query_joint_positions_state.py  robot_state_command_state.py  send_to_operator_state.py  update_dynamic_parameter_impedance_controller_state.py  update_dynamic_parameter_state.py  video_logging_state.py
flexbe_launch/: CMakeLists.txt  package.xml
flexbe_launch/launch/: behavior_ocs.launch  behavior_onboard_atlas.launch  behavior_testing_thor.launch
vigir_flexbe_behaviors/: CMakeLists.txt  package.xml  setup.py
vigir_flexbe_behaviors/behaviors/: #grasp_demo_behavior.xml  #look_down.xml  #mud_pit_behavior.xml  #pass_doors_behavior.xml  #task_2_behavior.xml  #teleop_crawl_behavior.xml  #valve_behavior.xml  #waypoint_movement_behavior.xml  vigir_behavior_atlas_vehicle_checkout.xml  vigir_behavior_cut_hole_in_wall.xml  vigir_behavior_exploration_demo.xml  vigir_behavior_flexbe_inner_test_behavior.xml  vigir_behavior_flexbe_test_behavior.xml  vigir_behavior_flexbe_testprint_behavior.xml  vigir_behavior_force_torque_sensor_calibration.xml  vigir_behavior_grasp_object.xml  vigir_behavior_manipulation_config.xml  vigir_behavior_open_door_and_walk_through.xml  vigir_behavior_open_door_atlas.xml  vigir_behavior_open_door_thor.xml  vigir_behavior_pickup_object.xml  vigir_behavior_steering_calibration.xml  vigir_behavior_surprise_push_button.xml  vigir_behavior_surprise_run_1_thor.xml  vigir_behavior_test_various_new_states.xml  vigir_behavior_thor_tests.xml  vigir_behavior_trigger_cutting_tool.xml  vigir_behavior_turn_valve_thor.xml  vigir_behavior_walk_and_grasp_demo.xml  vigir_behavior_walk_to_template.xml
vigir_flexbe_behaviors/behaviors/debris/: debris_task_behavior.xml  debris_throw.xml  wide_stance.xml
vigir_flexbe_behaviors/behaviors/door/: open_pull_door_behavior.xml
vigir_flexbe_behaviors/behaviors/valve/: repeated_valve_rotation_behavior.xml
vigir_flexbe_behaviors/behaviors/wall/: drill_line_behavior.xml
vigir_flexbe_behaviors/config/: dummy_topics.yaml  robot_config_atlas.yaml  robot_config_thor.yaml  startup_unit_testing_topics_advanced.yaml
vigir_flexbe_behaviors/src/vigir_flexbe_behaviors/: atlas_definitions.py
vigir_flexbe_launch/: CMakeLists.txt  package.xml
vigir_flexbe_launch/launch/: behavior_ocs.launch  behavior_onboard_atlas.launch  behavior_onboard_thor.launch  behavior_testing_atlas.launch  behavior_testing_thor.launch
vigir_flexbe_states/: CMakeLists.txt  package.xml  setup.py
vigir_flexbe_states/src/vigir_flexbe_states/: __init__.py  check_current_control_mode_state.py  execute_trajectory_msg_state.py  finger_configuration_state.py  (+28 more)
(+137 files in other folders)
