<package>
  <name>vigir_flexbe_states</name>
  <version>1.0.0</version>
  <description>
     vigir_flexbe_states provides a collection of predefined ViGIR-specific states.
     Feel free to add new states.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_flexbe_states</url>
  <author>Philipp Schillinger</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>trajectory_msgs</run_depend>
  <run_depend>control_msgs</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>moveit_msgs</run_depend>
  <run_depend>moveit_commander</run_depend>

  <!-- Some of these are probably obsolete -->
  <run_depend>flor_control_msgs</run_depend>
  <run_depend>vigir_ocs_msgs</run_depend>
  <run_depend>vigir_grasp_msgs</run_depend>

  <run_depend>flexbe_core</run_depend>
  <run_depend>vigir_planning_msgs</run_depend>
  <run_depend>vigir_teleop_planning_msgs</run_depend>
  <run_depend>vigir_footstep_planning_msgs</run_depend>
  <run_depend>vigir_object_template_msgs</run_depend>
  <run_depend>vigir_perception_msgs</run_depend>

</package>
