<package>
  <name>vigir_behavior_force_torque_sensor_calibration</name>
  <version>1.0.0</version>
  <description>
     A behavior that moves the arms and collects data for calibrating the force torque sensors.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_force_torque_sensor_calibration</url>
  <author>Moritz Schappler</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>

</package>