<package>
  <name>vigir_behavior_push_door_open</name>
  <version>1.0.0</version>
  <description>
     Performs a series of motions to push against the unlocked door.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_push_door_open</url>
  <author>Dorothea Koert, Philipp Schillingwe</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>

</package>