<package>
  <name>vigir_behavior_simple_footstep_test</name>
  <version>1.0.0</version>
  <description>
     Lets the robot walk in a square to test footstep action states.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_simple_footstep_test</url>
  <author>Philipp and Spyros</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>
  <run_depend>geometry_msgs</run_depend>

</package>
