<package>
  <name>vigir_behavior_stand_up_behavior</name>
  <version>1.0.0</version>
  <description>
    stand_up_behavior 
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_stand_up_behavior</url>
  <author>Dorothea Koert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>

</package>
