<package>
  <name>vigir_behavior_surprise_task_trigger</name>
  <version>1.0.0</version>
  <description>
     Simple generic behavior for a surprise task related to triggering anything.
  </description>
  <maintainer email="schillinger@sim.tu-darmstadt.de">Philipp Schillinger</maintainer>
  <license>BSD</license>

  <url>http://ros.org/wiki/vigir_behavior_surprise_task_trigger</url>
  <author>Philipp Schillinger, Dorothea Koert</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>rospy</run_depend>
  <run_depend>flexbe_core</run_depend>
  <run_depend>flexbe_states</run_depend>
  <run_depend>vigir_flexbe_states</run_depend>

</package>